Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129825

qplatformaudiobufferinput_p.h(41): error C2332: 'struct': missing tag name

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.8, 6.9.0 FF
    • 6.8.0
    • Multimedia
    • None
    • Windows
    • 33972b1ac (dev), 13a87175a (6.8), 34b0a4f58 (dev), 3e6e015b5 (6.8)
    • Multimedia wk 41-42

      since 6.8.0 I got this compilation error on windows/msvc (ok on linux/gcc osx/clang):

       

      FAILED: src/multimedia/CMakeFiles/Multimedia.dir/Unity/unity_0_cxx.cxx.obj 
      C:\PROGRA~1\MICROS~2\2022\ENTERP~1\VC\Tools\MSVC\1429~1.301\bin\HostX64\x64\cl.exe  /nologo /TP -DMultimedia_EXPORTS -DNOMINMAX -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_MULTIMEDIA_LIB -DQT_CORE_LIB -DQT_DEFAULT_MEDIA_BACKEND=\"ffmpeg\" -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_USE_QSTRINGBUILDER -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN64 -D_WINDLL -I%SRC_DIR%\build\src\multimedia\Multimedia_autogen\include -I%SRC_DIR%\build\include -I%SRC_DIR%\build\include\QtMultimedia -I%SRC_DIR%\src\multimedia -I%SRC_DIR%\build\src\multimedia -I%SRC_DIR%\src\multimedia\audio -I%SRC_DIR%\src\multimedia\camera -I%SRC_DIR%\src\multimedia\controls -I%SRC_DIR%\src\multimedia\platform -I%SRC_DIR%\src\multimedia\playback -I%SRC_DIR%\src\multimedia\recording -I%SRC_DIR%\src\multimedia\video -I%SRC_DIR%\build\include\QtMultimedia\6.8.0 -I%SRC_DIR%\build\include\QtMultimedia\6.8.0\QtMultimedia -I%SRC_DIR%\src\multimedia\windows -external:I%PREFIX%\Library\include\qt6\QtCore -external:I%PREFIX%\Library\include\qt6 -external:I%PREFIX%\Library\lib\qt6\mkspecs\win32-msvc -external:I%PREFIX%\Library\include\qt6\QtGui -external:I%PREFIX%\Library\include -external:I%PREFIX%\Library\include\qt6\QtNetwork -external:I%PREFIX%\Library\include\qt6\QtCore\6.8.0 -external:I%PREFIX%\Library\include\qt6\QtCore\6.8.0\QtCore -external:I%PREFIX%\Library\include\qt6\QtGui\6.8.0 -external:I%PREFIX%\Library\include\qt6\QtGui\6.8.0\QtGui -external:W0 /DWIN32 /D_WINDOWS /GR /DNDEBUG -O2 -Ob3 -std:c++17 -MD /W3 /EHs-c- /wd4530 /wd4577 -Zc:__cplusplus -permissive- -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:ternary -Zc:externConstexpr -Zc:wchar_t -bigobj -guard:cf -Gw /showIncludes /Fosrc\multimedia\CMakeFiles\Multimedia.dir\Unity\unity_0_cxx.cxx.obj /Fdsrc\multimedia\CMakeFiles\Multimedia.dir\ /FS -c %SRC_DIR%\build\src\multimedia\CMakeFiles\Multimedia.dir\Unity\unity_0_cxx.cxx
      %SRC_DIR%\src\multimedia\platform\qplatformaudiobufferinput_p.h(41): error C2332: 'struct': missing tag name
      %SRC_DIR%\src\multimedia\platform\qplatformaudiobufferinput_p.h(41): error C2144: syntax error: '<unnamed-tag>' should be preceded by ')'
      %SRC_DIR%\src\multimedia\platform\qplatformaudiobufferinput_p.h(41): error C2144: syntax error: '<unnamed-tag>' should be preceded by ';'
      %SRC_DIR%\src\multimedia\platform\qplatformaudiobufferinput_p.h(41): error C2059: syntax error: ')'
      %SRC_DIR%\src\multimedia\platform\qplatformaudiobufferinput_p.h(42): error C2059: syntax error: '{'
      %SRC_DIR%\src\multimedia\platform\qplatformaudiobufferinput_p.h(42): error C2334: unexpected token(s) preceding '{'; skipping apparent function body
      D:/bld/qt6-multimedia_1728463129918/work/src/multimedia/platform/qplatformvideoframeinput_p.h(40): error C2332: 'struct': missing tag name
      D:/bld/qt6-multimedia_1728463129918/work/src/multimedia/platform/qplatformvideoframeinput_p.h(40): error C2144: syntax error: '<unnamed-tag>' should be preceded by ')'
      D:/bld/qt6-multimedia_1728463129918/work/src/multimedia/platform/qplatformvideoframeinput_p.h(40): error C2144: syntax error: '<unnamed-tag>' should be preceded by ';'
      D:/bld/qt6-multimedia_1728463129918/work/src/multimedia/platform/qplatformvideoframeinput_p.h(40): error C2059: syntax error: ')'
      D:/bld/qt6-multimedia_1728463129918/work/src/multimedia/platform/qplatformvideoframeinput_p.h(41): error C2059: syntax error: '{'
      D:/bld/qt6-multimedia_1728463129918/work/src/multimedia/platform/qplatformvideoframeinput_p.h(41): error C2334: unexpected token(s) preceding '{'; skipping apparent function body
      [57/205] Building RC object src\multimedia\CMakeFiles\Multimedia.dir\Multimedia_resource.rc.res
      [58/205] Building CXX object src\multimedia\CMakeFiles\Multimedia.dir\Unity\unity_1_cxx.cxx.obj
      ninja: build stopped: subcommand failed.

       

       

        For Gerrit Dashboard: QTBUG-129825
        # Subject Branch Project Status CR V

            timblechmann tim blechmann
            jschueller Julien Schueller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes