QPlatformAudioBufferInput: avoid `interface` as variable name

windows headers `#define interface struct`, so it's typically not a good
variable name.

Fixes: QTBUG-129825
Pick-to: 6.8
Change-Id: I52758d747c13097d7eaf4b0423085641a1630475
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Pavel Dubsky <pavel.dubsky@qt.io>